--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -91,21 +91,25 @@ button[type='submit'] {
 	font-weight: bold;
 	cursor: pointer;
 	position: relative;
+	font-family: monospace;
 }
 
 .remove {
 	display: none;
 	position: absolute;
+	font-weight: normal;
+	color: white;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
 	z-index: 1;
+	background-color: #b0a990;
+	font-family: 'Montserrat', 'sans-serif';
 }
 
 .tag:hover .remove {
 	height: 100%;
 	width: 100%;
-	background-color: #b0a990;
 	display: flex;
 	align-items: center;
 	justify-content: center;
