--- a/src/App.css
+++ b/src/App.css
@@ -32,3 +32,11 @@ main {
 	background-color: #b0a990;
 	color: #202030;
 }
+
+@media screen and (max-width: 320px) {
+	main {
+		width: 100vw;
+		margin-left: 0;
+		margin-right: 0;
+	}
+}
