--- a/src/components/Message.css
+++ b/src/components/Message.css
@@ -1,10 +1,11 @@
 .message {
-	border: 1px #202030 solid;
 	padding: 1em;
 	color: #202030;
 	font-weight: 500;
 	letter-spacing: 0.1em;
+	border: 1px solid #20203060;
 	border-radius: 0.2em;
+	border-top: 6px solid #20203060;
 	background-color: white;
 	display: flex;
 	flex-direction: column;
