--- a/src/pages/tag.css
+++ b/src/pages/tag.css
@@ -4,4 +4,16 @@
 	text-align: left;
 	margin-bottom: 1em;
 	color: #202030;
+	font-size: 1.3rem;
+	font-weight: bold;
+	transition: color 0.3s;
+}
+
+.back-home:hover {
+	color: #b0a990;
+}
+
+.tagCont {
+	text-align: center;
+	margin: 1em 0;
 }
