Update buttons color

--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -71,7 +71,7 @@ button[type='submit'] {
 	font-size: inherit;
 	border-radius: 0.2em;
 	cursor: pointer;
-	background-color: #b0a990;
+	background-color:  #202030;
 }
 
 button[type='submit'] {
