--- a/src/components/Message.css
+++ b/src/components/Message.css
@@ -39,6 +39,11 @@
 	margin-right: 0.8em;
 	padding: 0.1em 0.3em;
 	border-radius: 0.2em;
+	transition: background-color 0.3s;
+}
+
+.tag-span:hover {
+	background-color: #39304a;
 }
 
 .tag-link {
